--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Budget-Tracker</title>
+    <title>BudgetApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,16 +10,18 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <ul>
-      <% if user_signed_in? %>
-      <li><%= link_to "Hi, #{current_user.email}", edit_user_registration_path %></li>
-      <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
-        <% else %>
-          <li><%= link_to 'Sign In', new_user_session_path %></li>
-      <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-        <% end %>
-    </ul>
+  <body class="bg-light">
+    <%= render partial: "layouts/nav" %>
+    <% if notice && notice.empty? %>
+      <div class="alert alert-primary" role="alert">
+        <p class="notice"><%= notice %></p>
+      </div>
+    <% elsif alert && alert.empty?  %>
+      <div class="alert alert-danger" role="alert">
+        <p class="alert"><%= alert %></p>
+      </div>
+    <% end %>
     <%= yield %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
